[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Stage.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/Forest01.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/system/PlayerInputHandler.gd" type="Script" id=3]
[ext_resource path="res://scenes/entities/Lerow.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/entities/StickyGreen.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "zoom_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.3, 0.3 ) ]
}

[node name="Stage" type="Node2D"]
script = ExtResource( 1 )

[node name="Forest01" parent="." instance=ExtResource( 2 )]

[node name="PlayerInputHandler" type="Node2D" parent="."]
script = ExtResource( 3 )
entity = NodePath("../Lerow")

[node name="Lerow" parent="." groups=[
"lerow",
] instance=ExtResource( 4 )]
position = Vector2( 296, 384 )
entity_name = "Lerow"
movement_speed = 160.0
acceleration = 10.0
jump_height = 140.0
is_playable = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 888, -152 )
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_speed = 10.0

[node name="Zoom" type="AnimationPlayer" parent="Camera2D"]
anims/zoom_in = SubResource( 1 )
anims/zoom_out = SubResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Healthbar" type="HBoxContainer" parent="UI"]
modulate = Color( 0.956863, 0.937255, 1, 1 )
margin_left = 8.0
margin_right = 320.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StickyGreen" parent="." instance=ExtResource( 5 )]
position = Vector2( 224, 384 )
movement_speed = 200.0
jump_height = 200.0
is_playable = true
[connection signal="cinematic_action_finished" from="Forest01" to="." method="_on_Forest01_cinematic_action_finished"]
[connection signal="cinematic_action_start" from="Forest01" to="." method="_on_Forest01_cinematic_action_start"]
[connection signal="health_changed" from="Lerow" to="." method="_on_Lerow_health_changed"]
[connection signal="body_entered" from="StickyGreen" to="." method="_on_StickyGreen_body_entered"]
[connection signal="body_exited" from="StickyGreen" to="." method="_on_StickyGreen_body_exited"]
